--- a/index.html
+++ b/index.html
@@ -442,6 +442,15 @@
                 <div class="shortcut-name">Gamabr Zia</div>
                 <a href="https://shortcutpro.github.io/shortcutpro/gambar-zia.html" target="_blank" style="display: none;"></a>
             </div>
+            
+            <!-- Prediksi Togel -->
+            <div class="shortcut-item" data-name="prediksi togel" data-category="gaming">
+                <div class="shortcut-icon">
+                    <i class="fas fa-chart-line"></i>
+                </div>
+                <div class="shortcut-name">Prediksi Togel</div>
+                <a href="https://shortcutpro.github.io/shortcutpro/prediksitogel.html" target="_blank" style="display: none;"></a>
+            </div>
         </div>
     </div>
 
