--- a/hitungfreespin-buyspin.html
+++ b/hitungfreespin-buyspin.html
@@ -71,7 +71,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, rgba(124, 77, 255, 0.9) 0%, rgba(0, 229, 255, 0.9) 100%);
+            background: linear-gradient(135deg, rgb(255, 0, 0) 0%, rgb(251, 255, 0) 100%);
             color: var(--white);
             padding: 30px;
             text-align: center;
@@ -120,6 +120,28 @@
             max-width: 600px;
             margin: 0 auto;
             text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+        }
+
+        .promo-images {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+            flex-wrap: wrap;
+        }
+
+        .promo-image {
+            max-width: 100%;
+            height: auto;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            border: 1px solid var(--glass-border);
+            transition: var(--transition);
+        }
+
+        .promo-image:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(124, 77, 255, 0.3);
         }
 
         .footer {
@@ -632,6 +654,16 @@
             .summary-cards {
                 grid-template-columns: 1fr;
             }
+
+            .promo-images {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .promo-image {
+                width: 100%;
+                max-width: 100%;
+            }
         }
 
         /* Custom scrollbar */
@@ -718,6 +750,12 @@
             <div class="header-content">
                 <h1 class="glow"><i class="fas fa-calculator"></i> Calculator Scatter PG-Soft</h1>
                 <p>Dashboard untuk Perhitungan FreeSpin & BuySpin PG-Soft</p>
+                
+                <!-- Added promo images here -->
+                <div class="promo-images">
+                    <img src="https://cdn.areabermain.club/assets/cdn/az1/2025/03/26/20250326/c7af6927f316815744fbab3415e80fb8/buy-spin-dan-free-spin-gif.gif" alt="Buy Spin & Free Spin" class="promo-image">
+                    <img src="https://cdn.areabermain.club/assets/cdn/az1/2025/07/08/20250708/ccf7bc6db55d430f5ad241a111faf1ac/tvtoto-promo-superscatter-gif2.gif" alt="TVTOTO Promo Superscatter" class="promo-image">
+                </div>
             </div>
         </div>
 
