--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 Shortcut Pro. All Rights Reserved. | Semua hak cipta dilindungi.</p>
+        <p>© 2025 Shortcut Pro. Create by 𝕃𝔼𝕆. | All Rights Reserved. | Semua hak cipta dilindungi.</p>
     </footer>
 
     <script>
@@ -636,5 +636,6 @@
     </script>
 </body>
 </html>
+
 
 
