--- a/index.html
+++ b/index.html
@@ -508,6 +508,15 @@
                 <div class="shortcut-name">Hitung Bonus</div>
                 <a href="https://shortcutpro.vercel.app/bagi-bonus.html" target="_blank" style="display: none;"></a>
             </div>
+
+            <!-- Script Bola -->
+            <div class="shortcut-item" data-name="script bola" data-category="sports">
+                <div class="shortcut-icon">
+                    <i class="fas fa-futbol"></i>
+                </div>
+                <div class="shortcut-name">Script Bola</div>
+                <a href="https://shortcutpro.vercel.app/scriptbola.html" target="_blank" style="display: none;"></a>
+            </div>
             
         </div>
     </div>
@@ -636,6 +645,7 @@
     </script>
 </body>
 </html>
+
 
 
 
