--- a/index.html
+++ b/index.html
@@ -373,6 +373,15 @@
                 <div class="shortcut-name">Cek KTP</div>
                 <a href="https://ktpku.com/" target="_blank" style="display: none;"></a>
             </div>
+
+            <!-- Cek Bettingan SBO -->
+            <div class="shortcut-item" data-name="cek bettingan sbo" data-category="sports">
+                <div class="shortcut-icon">
+                    <i class="fas fa-clipboard-list"></i>
+                </div>
+                <div class="shortcut-name">Cek Bettingan SBO</div>
+                <a href="https://sbo-sports-bet-checker.568win.com/?lang=zh-cn#TCP-45172" target="_blank" style="display: none;"></a>
+            </div>
             
             <!-- Cek Batasan Line -->
             <div class="shortcut-item" data-name="cek batasan line" data-category="tools">
@@ -645,6 +654,7 @@
     </script>
 </body>
 </html>
+
 
 
 
