--- a/index.html
+++ b/index.html
@@ -526,6 +526,15 @@
                 <div class="shortcut-name">Script Bola</div>
                 <a href="https://shortcutpro.vercel.app/scriptbola.html" target="_blank" style="display: none;"></a>
             </div>
+
+            <!-- Gabungkan Gambar -->
+            <div class="shortcut-item" data-name="gabungkan gambar" data-category="tools">
+                <div class="shortcut-icon">
+                    <i class="fas fa-object-group"></i>
+                </div>
+                <div class="shortcut-name">Gabungkan Gambar</div>
+                <a href="https://shortcutpro.vercel.app/gabunggambar.html" target="_blank" style="display: none;"></a>
+            </div>
             
         </div>
     </div>
@@ -654,6 +663,7 @@
     </script>
 </body>
 </html>
+
 
 
 
