--- a/index.html
+++ b/index.html
@@ -501,13 +501,13 @@
             </div>
             
             <!-- Generator Syair dan Angka -->
-            <div class="shortcut-item" data-name="generator syair dan angka" data-category="gaming">
+            <!-- <div class="shortcut-item" data-name="generator syair dan angka" data-category="gaming">
                 <div class="shortcut-icon">
                     <i class="fas fa-dice"></i>
                 </div>
                 <div class="shortcut-name">Generator Syair & Angka</div>
                 <a href="https://shortcutpro.vercel.app/generatorsyairdanangka.html" target="_blank" style="display: none;"></a>
-            </div>
+            </div> -->
             
             <!-- Hitung Bonus -->
             <div class="shortcut-item" data-name="hitung bonus" data-category="finance">
@@ -663,6 +663,7 @@
     </script>
 </body>
 </html>
+
 
 
 
