--- a/index.html
+++ b/index.html
@@ -527,6 +527,15 @@
                 <a href="https://shortcutpro.vercel.app/scriptbola.html" target="_blank" style="display: none;"></a>
             </div>
 
+            <!-- Generator Script JP -->
+            <div class="shortcut-item" data-name="generator script jp" data-category="gaming">
+                <div class="shortcut-icon">
+                    <i class="fas fa-scroll"></i>
+                </div>
+                <div class="shortcut-name">Generator Script JP</div>
+                <a href="https://shortcutpro.vercel.app/generator-script-jp.html" target="_blank" style="display: none;"></a>
+            </div>
+
             <!-- Gabungkan Gambar -->
             <div class="shortcut-item" data-name="gabungkan gambar" data-category="tools">
                 <div class="shortcut-icon">
@@ -663,6 +672,7 @@
     </script>
 </body>
 </html>
+
 
 
 
