--- a/index.html
+++ b/index.html
@@ -527,12 +527,12 @@
                 <a href="https://shortcutpro.vercel.app/scriptbola.html" target="_blank" style="display: none;"></a>
             </div>
 
-            <!-- Generator Script JP -->
+            <!-- Script JP -->
             <div class="shortcut-item" data-name="generator script jp" data-category="gaming">
                 <div class="shortcut-icon">
                     <i class="fas fa-scroll"></i>
                 </div>
-                <div class="shortcut-name">Generator Script JP</div>
+                <div class="shortcut-name">Script JP</div>
                 <a href="https://shortcutpro.vercel.app/generator-script-jp.html" target="_blank" style="display: none;"></a>
             </div>
 
@@ -672,6 +672,7 @@
     </script>
 </body>
 </html>
+
 
 
 
