--- a/index.html
+++ b/index.html
@@ -544,6 +544,15 @@
                 <div class="shortcut-name">Gabungkan Gambar</div>
                 <a href="https://shortcutpro.vercel.app/gabunggambar.html" target="_blank" style="display: none;"></a>
             </div>
+
+            <!-- Peminjaman Pengembalian -->
+            <div class="shortcut-item" data-name="peminjaman pengembalian" data-category="finance">
+                <div class="shortcut-icon">
+                    <i class="fas fa-exchange-alt"></i>
+                </div>
+                <div class="shortcut-name">Peminjaman Pengembalian</div>
+                <a href="https://shortcutpro.vercel.app/peminjaman-pengembalian.html" target="_blank" style="display: none;"></a>
+            </div>
             
         </div>
     </div>
@@ -672,6 +681,7 @@
     </script>
 </body>
 </html>
+
 
 
 
