--- a/scriptbola.html
+++ b/scriptbola.html
@@ -503,7 +503,7 @@ font-family: 'Poppins', sans-serif;
 background-color: 
 #990000;
 color: 
-#ffffff;
+#ffcc00;
 padding: 0px;
 line-height: 1.6;
 }
@@ -602,6 +602,7 @@ font-weight: 600;
 }
 td {
 padding: 10px 12px;
+font-weight: 700;
 text-align: center;
 border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
