--- a/scriptbola.html
+++ b/scriptbola.html
@@ -575,6 +575,7 @@ color:
 padding: 12px 15px;
 font-size: 18px;
 font-weight: 700;
+text-align: center;
 text-transform: uppercase;
 border-bottom: 1px solid 
 #ff3333;
