--- a/index.html
+++ b/index.html
@@ -445,6 +445,15 @@
                 <div class="shortcut-name">Hitung Togel IDN</div>
                 <a href="https://shortcutpro.vercel.app/togel-idn.html" target="_blank" style="display: none;"></a>
             </div>
+
+            <!-- Hitung Togel IDN NEW -->
+            <div class="shortcut-item" data-name="hitung togel idn" data-category="gaming">
+                <div class="shortcut-icon">
+                    <i class="fas fa-calculator"></i>
+                </div>
+                <div class="shortcut-name">Hitung Togel IDN NEW</div>
+                <a href="https://shortcutpro.vercel.app/togel-idn-new.html" target="_blank" style="display: none;"></a>
+            </div>            
             
             <!-- Kalkulator Parlay -->
             <div class="shortcut-item" data-name="kalkulator parlay" data-category="gaming">
@@ -681,6 +690,7 @@
     </script>
 </body>
 </html>
+
 
 
 
