--- a/togel-idn-new.html
+++ b/togel-idn-new.html
@@ -756,15 +756,15 @@
                                             };
 
                                             const prizeBlock = (p14, p13, p12, p24, p23, p22, p34, p33, p32) => ({
-                                                'PRIZE 1 - 1': { hadiah: p14, diskon: 0 },
-                                                'PRIZE 1 - 2': { hadiah: p13, diskon: 0 },
-                                                'PRIZE 1 - 3': { hadiah: p12, diskon: 0 },
-                                                'PRIZE 2 - 1': { hadiah: p24, diskon: 0 },
-                                                'PRIZE 2 - 2': { hadiah: p23, diskon: 0 },
-                                                'PRIZE 2 - 3': { hadiah: p22, diskon: 0 },
-                                                'PRIZE 3 - 1': { hadiah: p34, diskon: 0 },
-                                                'PRIZE 3 - 2': { hadiah: p33, diskon: 0 },
-                                                'PRIZE 3 - 3': { hadiah: p32, diskon: 0 }
+                                                'PRIZE 1 - 4D': { hadiah: p14, diskon: 0 },
+                                                'PRIZE 1 - 3D': { hadiah: p13, diskon: 0 },
+                                                'PRIZE 1 - 2D': { hadiah: p12, diskon: 0 },
+                                                'PRIZE 2 - 4D': { hadiah: p24, diskon: 0 },
+                                                'PRIZE 2 - 3D': { hadiah: p23, diskon: 0 },
+                                                'PRIZE 2 - 2D': { hadiah: p22, diskon: 0 },
+                                                'PRIZE 3 - 4D': { hadiah: p34, diskon: 0 },
+                                                'PRIZE 3 - 3D': { hadiah: p33, diskon: 0 },
+                                                'PRIZE 3 - 2D': { hadiah: p32, diskon: 0 }
                                             });
 
                                             // Configuration storage
