--- a/togel-idn-new.html
+++ b/togel-idn-new.html
@@ -1385,7 +1385,7 @@
                                                     const titleMap = {
                                                         diskon: 'Diskon',
                                                         betfull: 'Bet Full',
-                                                        prize: 'Prize',
+                                                        prize: 'Prize 123',
                                                         tepatbb: 'Tepat & BB',
                                                         lain: 'Lainnya'
                                                     };
