--- a/togel-png-new.html
+++ b/togel-png-new.html
@@ -726,7 +726,7 @@
                     'POIPET': 'https://poipetlottery.com/img/logo.png',
                     'SINGAPORE': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/ae20d56fcb2d0dea6b0ae637c6bed566/singapore-new.png',
                     'SYDNEY': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/1d9ba1f974240b7b5c5e48fa2ef98e0e/sydney-2.png',
-                    'TOTOMALI': 'https://cdn.areabermain.club/assets/cdn/az8/2025/08/18/20250818/383a30e8a8e65f1d0da9fb7fa850d853/channels4-banner.png',
+                    'TOTOMALI': 'https://totomali.com/assets/img/logo.svg',
                     'TOTO MACAU 4D': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/033094b5e73f842fcbcc3b235c029e7c/macau-logo.png',
                     'KINGKONG': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/32f87d6c932b0d2eee9b6e1c9028ab41/logo-2.png',
                     'TOTO CAMBODIA': 'https://totocambodialive.com/assets/img/logo.png'
@@ -922,27 +922,27 @@
                         '3D BB': { hadiah: 75 },
                         '2D TEPAT': { hadiah: 80 },
                         '2D BB': { hadiah: 15 },
-                        'COLOK BEBAS': { hadiah: 0.9, diskon: 0 },
-                        'COLOK BEBAS ( 2 )': { hadiah: 1.8, diskon: 0 },
-                        'COLOK BEBAS ( 3 )': { hadiah: 2.7, diskon: 0 },
-                        'COLOK BEBAS ( 4 )': { hadiah: 3.6, diskon: 0 },
-                        'COLOK BEBAS ( 5 )': { hadiah: 4.5, diskon: 0 },
-                        'COLOK JITU': { hadiah: 8 },
-                        'COLOK BEBAS 2D ( 2 )': { hadiah: 4 },
-                        'COLOK BEBAS 2D ( 3 )': { hadiah: 6 },
-                        'COLOK BEBAS 2D ( 4 )': { hadiah: 20 },
-                        'COLOK BEBAS 2D ( 5 )': { hadiah: 200 },
-                        'COLOK BEBAS 4D ( 4 )': { hadiah: 50 },
-                        'COLOK BEBAS 4D ( 5 )': { hadiah: 200 },
-                        'COLOK NAGA ( 3 )': { hadiah: 12 },
-                        'COLOK NAGA ( 4 )': { hadiah: 30 },
-                        'COLOK NAGA ( 5 )': { hadiah: 125 },
-                        'SHIO': { hadiah: 10 },
-                        '50 - 50': { kei: -3 },
-                        'KOMBINASI': { hadiah: 2.7 },
-                        'TENGAH TEPI': { kei: -2.2 },
-                        'DASAR GANJIL - BESAR': { kei: -25 },
-                        'DASAR GENAP - KECIL': { kei: 10 }
+                        'COLOK BEBAS ( 1 DIGIT )': { hadiah: 0.9, diskon: 6 },
+                        'COLOK BEBAS ( 2 DIGIT )': { hadiah: 1.8, diskon: 6 },
+                        'COLOK BEBAS ( 3 DIGIT )': { hadiah: 2.7, diskon: 6 },
+                        'COLOK BEBAS ( 4 DIGIT )': { hadiah: 3.6, diskon: 6 },
+                        'COLOK BEBAS ( 5 DIGIT )': { hadiah: 4.5, diskon: 6 },
+                        'COLOK JITU': { hadiah: 8, diskon: 6 },
+                        'COLOK BEBAS 2D ( 2 DIGIT )': { hadiah: 4, diskon: 10 },
+                        'COLOK BEBAS 2D ( 3 DIGIT )': { hadiah: 6, diskon: 10 },
+                        'COLOK BEBAS 2D ( 4 DIGIT )': { hadiah: 20, diskon: 10 },
+                        'COLOK BEBAS 2D ( 5 DIGIT )': { hadiah: 200, diskon: 10 },
+                        'COLOK BEBAS 4D ( 4 DIGIT )': { hadiah: 50, diskon: 10 },
+                        'COLOK BEBAS 4D ( 5 DIGIT )': { hadiah: 200, diskon: 10 },
+                        'COLOK NAGA ( 3 DIGIT )': { hadiah: 12, diskon: 10 },
+                        'COLOK NAGA ( 4 DIGIT )': { hadiah: 30, diskon: 10 },
+                        'COLOK NAGA ( 5 DIGIT )': { hadiah: 125, diskon: 10 },
+                        'SHIO': { hadiah: 9.5, diskon: 5 },
+                        '50 - 50': { kei: -2.2, diskon: 2 },
+                        'KOMBINASI': { hadiah: 2.7, diskon: 8 },
+                        'TENGAH TEPI': { kei: -2.2, diskon: 2 },
+                        'DASAR GANJIL - BESAR': { kei: -25, diskon: 2 },
+                        'DASAR GENAP - KECIL': { kei: 10, diskon: 2 }
                     }
                 });
 
@@ -963,16 +963,16 @@
                         '3D BB': { hadiah: 100 },
                         '2D TEPAT': { hadiah: 70 },
                         '2D BB': { hadiah: 20 },
-                        'COLOK BEBAS': { hadiah: 1.5, diskon: 6 },
-                        'COLOK BEBAS ( 2 )': { hadiah: 3, diskon: 6 },
-                        'COLOK BEBAS ( 3 )': { hadiah: 4.5, diskon: 6 },
-                        'COLOK BEBAS ( 4 )': { hadiah: 6, diskon: 6 },
+                        'COLOK BEBAS ( 1 DIGIT )': { hadiah: 1.5, diskon: 6 },
+                        'COLOK BEBAS ( 2 DIGIT )': { hadiah: 3, diskon: 6 },
+                        'COLOK BEBAS ( 3 DIGIT )': { hadiah: 4.5, diskon: 6 },
+                        'COLOK BEBAS ( 4 DIGIT )': { hadiah: 6, diskon: 6 },
                         'COLOK JITU': { hadiah: 8, diskon: 6 },
-                        'COLOK BEBAS 2D ( 2 )': { hadiah: 7, diskon: 10 },
-                        'COLOK BEBAS 2D ( 3 )': { hadiah: 11, diskon: 10 },
-                        'COLOK BEBAS 2D ( 4 )': { hadiah: 18, diskon: 10 },
-                        'COLOK NAGA ( 3 )': { hadiah: 23, diskon: 10 },
-                        'COLOK NAGA ( 4 )': { hadiah: 35, diskon: 10 },
+                        'COLOK BEBAS 2D ( 2 DIGIT )': { hadiah: 7, diskon: 10 },
+                        'COLOK BEBAS 2D ( 3 DIGIT )': { hadiah: 11, diskon: 10 },
+                        'COLOK BEBAS 2D ( 4 DIGIT )': { hadiah: 18, diskon: 10 },
+                        'COLOK NAGA ( 3 DIGIT )': { hadiah: 23, diskon: 10 },
+                        'COLOK NAGA ( 4 DIGIT )': { hadiah: 35, diskon: 10 },
                         'SHIO': { hadiah: 9.5, diskon: 5 },
                         '50 - 50': { kei: -3, diskon: 2 },
                         'TENGAH TEPI': { kei: -3, diskon: 2 },
@@ -995,16 +995,16 @@
                         base['DISKON 2D'] = { hadiah: 70, diskon: 27 };
                         delete base['DISKON 2D DEPAN'];
                         delete base['DISKON 2D TENGAH'];
-                        base['COLOK BEBAS'] = { hadiah: 1.6, diskon: 6 };
-                        base['COLOK BEBAS ( 2 )'] = { hadiah: 3.2, diskon: 6 };
-                        base['COLOK BEBAS ( 3 )'] = { hadiah: 4.8, diskon: 6 };
-                        base['COLOK BEBAS ( 4 )'] = { hadiah: 6.4, diskon: 6 };
+                        base['COLOK BEBAS ( 1 DIGIT )'] = { hadiah: 1.6, diskon: 6 };
+                        base['COLOK BEBAS ( 2 DIGIT )'] = { hadiah: 3.2, diskon: 6 };
+                        base['COLOK BEBAS ( 3 DIGIT )'] = { hadiah: 4.8, diskon: 6 };
+                        base['COLOK BEBAS ( 4 DIGIT )'] = { hadiah: 6.4, diskon: 6 };
                         base['COLOK JITU'] = { hadiah: 8.3, diskon: 6 };
-                        base['COLOK BEBAS 2D ( 2 )'] = { hadiah: 7, diskon: 10 };
-                        base['COLOK BEBAS 2D ( 3 )'] = { hadiah: 13, diskon: 10 };
-                        base['COLOK BEBAS 2D ( 4 )'] = { hadiah: 21, diskon: 10 };
-                        base['COLOK NAGA ( 3 )'] = { hadiah: 27, diskon: 10 };
-                        base['COLOK NAGA ( 4 )'] = { hadiah: 41, diskon: 10 };
+                        base['COLOK BEBAS 2D ( 2 DIGIT )'] = { hadiah: 7, diskon: 10 };
+                        base['COLOK BEBAS 2D ( 3 DIGIT )'] = { hadiah: 13, diskon: 10 };
+                        base['COLOK BEBAS 2D ( 4 DIGIT )'] = { hadiah: 21, diskon: 10 };
+                        base['COLOK NAGA ( 3 DIGIT )'] = { hadiah: 27, diskon: 10 };
+                        base['COLOK NAGA ( 4 DIGIT )'] = { hadiah: 41, diskon: 10 };
                         base['SHIO'] = { hadiah: 10, diskon: 5 };
                         base['50 - 50'] = { kei: -3, diskon: 2 };
                         base['TENGAH TEPI'] = { kei: -3, diskon: 2 };
@@ -1030,20 +1030,26 @@
                         'DISKON 2D TENGAH': { hadiah: 65, diskon: 29.5 },
                         'BET FULL 4D': { hadiah: 10000, diskon: 0 },
                         'BET FULL 3D': { hadiah: 1000, diskon: 0 },
-                        'BET FULL 2D': { hadiah: 100, diskon: 0 }
+                        'BET FULL 2D': { hadiah: 100, diskon: 0 },
+                        '4D TEPAT': { hadiah: 4000 },
+                        '4D BB': { hadiah: 200 },
+                        '3D TEPAT': { hadiah: 400 },
+                        '3D BB': { hadiah: 100 },
+                        '2D TEPAT': { hadiah: 70 },
+                        '2D BB': { hadiah: 20 }
                     };
 
                     const others = {
-                        'COLOK BEBAS': { hadiah: 1.5, diskon: 6 },
-                        'COLOK BEBAS ( 2 )': { hadiah: 3, diskon: 6 },
-                        'COLOK BEBAS ( 3 )': { hadiah: 4.5, diskon: 6 },
-                        'COLOK BEBAS ( 4 )': { hadiah: 6, diskon: 6 },
+                        'COLOK BEBAS ( 1 DIGIT )': { hadiah: 1.5, diskon: 6 },
+                        'COLOK BEBAS ( 2 DIGIT )': { hadiah: 3, diskon: 6 },
+                        'COLOK BEBAS ( 3 DIGIT )': { hadiah: 4.5, diskon: 6 },
+                        'COLOK BEBAS ( 4 DIGIT )': { hadiah: 6, diskon: 6 },
                         'COLOK JITU': { hadiah: 8, diskon: 6 },
-                        'COLOK BEBAS 2D ( 2 )': { hadiah: 7, diskon: 10 },
-                        'COLOK BEBAS 2D ( 3 )': { hadiah: 11, diskon: 10 },
-                        'COLOK BEBAS 2D ( 4 )': { hadiah: 18, diskon: 10 },
-                        'COLOK NAGA ( 3 )': { hadiah: 23, diskon: 10 },
-                        'COLOK NAGA ( 4 )': { hadiah: 35, diskon: 10 },
+                        'COLOK BEBAS 2D ( 2 DIGIT )': { hadiah: 7, diskon: 10 },
+                        'COLOK BEBAS 2D ( 3 DIGIT )': { hadiah: 11, diskon: 10 },
+                        'COLOK BEBAS 2D ( 4 DIGIT )': { hadiah: 18, diskon: 10 },
+                        'COLOK NAGA ( 3 DIGIT )': { hadiah: 23, diskon: 10 },
+                        'COLOK NAGA ( 4 DIGIT )': { hadiah: 35, diskon: 10 },
                         'SHIO': { hadiah: 9.5, diskon: 5 },
                         '50 - 50': { kei: -3, diskon: 2 },
                         'TENGAH TEPI': { kei: -3, diskon: 2 },
@@ -1076,16 +1082,16 @@
                             '3D BB': { hadiah: 100 },
                             '2D TEPAT': { hadiah: 70 },
                             '2D BB': { hadiah: 20 },
-                            'COLOK BEBAS': { hadiah: 1.5, diskon: 6 },
-                            'COLOK BEBAS ( 2 )': { hadiah: 3, diskon: 6 },
-                            'COLOK BEBAS ( 3 )': { hadiah: 4.5, diskon: 6 },
-                            'COLOK BEBAS ( 4 )': { hadiah: 6, diskon: 6 },
+                            'COLOK BEBAS ( 1 DIGIT )': { hadiah: 1.5, diskon: 6 },
+                            'COLOK BEBAS ( 2 DIGIT )': { hadiah: 3, diskon: 6 },
+                            'COLOK BEBAS ( 3 DIGIT )': { hadiah: 4.5, diskon: 6 },
+                            'COLOK BEBAS ( 4 DIGIT )': { hadiah: 6, diskon: 6 },
                             'COLOK JITU': { hadiah: 8, diskon: 6 },
-                            'COLOK BEBAS 2D ( 2 )': { hadiah: 7, diskon: 10 },
-                            'COLOK BEBAS 2D ( 3 )': { hadiah: 11, diskon: 10 },
-                            'COLOK BEBAS 2D ( 4 )': { hadiah: 18, diskon: 10 },
-                            'COLOK NAGA ( 3 )': { hadiah: 23, diskon: 10 },
-                            'COLOK NAGA ( 4 )': { hadiah: 35, diskon: 10 },
+                            'COLOK BEBAS 2D ( 2 DIGIT )': { hadiah: 7, diskon: 10 },
+                            'COLOK BEBAS 2D ( 3 DIGIT )': { hadiah: 11, diskon: 10 },
+                            'COLOK BEBAS 2D ( 4 DIGIT )': { hadiah: 18, diskon: 10 },
+                            'COLOK NAGA ( 3 DIGIT )': { hadiah: 23, diskon: 10 },
+                            'COLOK NAGA ( 4 DIGIT )': { hadiah: 35, diskon: 10 },
                             'SHIO': { hadiah: 9.5, diskon: 5 },
                             '50 - 50': { kei: -3, diskon: 2 },
                             'TENGAH TEPI': { kei: -3, diskon: 2 },
