--- a/togel-idn-new.html
+++ b/togel-idn-new.html
@@ -598,7 +598,7 @@
                                                 'POIPET': 'https://poipetlottery.com/img/logo.png',
                                                 'SINGAPORE': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/ae20d56fcb2d0dea6b0ae637c6bed566/singapore-new.png',
                                                 'SYDNEY': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/1d9ba1f974240b7b5c5e48fa2ef98e0e/sydney-2.png',
-                                                'TOTOMALI': 'https://cdn.areabermain.club/assets/cdn/az8/2025/08/18/20250818/383a30e8a8e65f1d0da9fb7fa850d853/channels4-banner.png',
+                                                'TOTOMALI': 'https://totomali.com/assets/img/logo.svg',
                                                 'TOTO MACAU 4D': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/033094b5e73f842fcbcc3b235c029e7c/macau-logo.png',
                                                 'TOTO MACAU 5D': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/3cbd41c8d7267cad6a5e55a1f08fd72d/macau-5d-removebg-preview.png',
                                                 'KINGKONG': 'https://cdn.areabermain.club/assets/cdn/az4/2025/08/18/20250818/32f87d6c932b0d2eee9b6e1c9028ab41/logo-2.png',
