--- a/index.html
+++ b/index.html
@@ -464,6 +464,15 @@
                 <a href="https://shortcutpro.vercel.app/kalkulator-parlay.html" target="_blank" style="display: none;"></a>
             </div>
 
+            <!-- Jadwal Pasaran -->
+            <div class="shortcut-item" data-name="jadwal pasaran" data-category="tools">
+                <div class="shortcut-icon">
+                    <i class="fas fa-calendar-alt"></i>
+                </div>
+                <div class="shortcut-name">Jadwal Pasaran</div>
+                <a href="https://shortcutpro.vercel.app/jadwalpasaran.html" target="_blank" style="display: none;"></a>
+            </div>
+
             <!-- Dashboard PG SOFT -->
             <div class="shortcut-item" data-name="dashboard pg soft" data-category="gaming">
                 <div class="shortcut-icon">
@@ -690,6 +699,7 @@
     </script>
 </body>
 </html>
+
 
 
 
