--- a/jadwalpasaran.html
+++ b/jadwalpasaran.html
@@ -596,7 +596,7 @@
 
     <script>
         const pasaranData = [
-            {name: "HOKI DRAW 00", days: "Senin s/d Minggu", tutup: "23:59 WIB", buka: "00:00 WIB", website: "https://hokidraw.com/", live: "https://www.youtube.com/@hokidraw-official", prizeType: "price1"},
+            {name: "HOKI DRAW 00", days: "Senin s/d Minggu", tutup: "23:59 WIB", buka: "00:00 WIB", website: "https://hokidraw.com/", live: "https://kick.com/hokidraw", prizeType: "price1"},
             {name: "TOTO MACAU PAGI", days: "Senin s/d Minggu", tutup: "00:00 WIB", buka: "00:15 WIB", website: "https://totomacaunew.us/", live: "https://kick.com/live-ttm4d", prizeType: "price1"},
             {name: "KENTUCKY MIDDAY", days: "Senin s/d Minggu", tutup: "00:05 WIB", buka: "00:20 WIB", website: "https://www.kylottery.com/apps/", live: null, prizeType: "price1"},
             {name: "FLORIDA MIDDAY", days: "Senin s/d Minggu", tutup: "00:20 WIB", buka: "00:30 WIB", website: "https://floridalottery.com/", live: "https://www.youtube.com/user/floridalottery", prizeType: "price1"},
